# cxx-guess-elf-arch

./: .gitignore  CMakeLists.txt  LICENSE.txt
.github/workflows/: main.yml
ci/: build-in-docker.sh  build.sh  install-argagg.sh
src/: CMakeLists.txt  main.cpp
